syntax = "proto3";

import "Protos/Accounts/accountCommon.proto";

option csharp_namespace = "Grpc.Accounts";

package accounts;

service UserAccountGrpcService {
  
	rpc CreateClientAccount(CreateClientUserAccountRequest) returns (CreateClientUserAccountResponse);

	rpc CreateUser (CreateUserRequest) returns (CreateCreateUserResponse);


	rpc CreateRole (CreateRoleRequest) returns (CreateRoleRespone);

	rpc FindAccountById (FindUserAccountByIdRequest) returns (FindUserAccountByIdResponse);

	rpc FindAccountByUserName (FindUserAccountByUserNameRequest) returns (FindUserAccountByUserNameResponse);
}


message CreateUserRequest {
	string first_name = 1;
	string second_name = 2;
	string email = 3;
}
message CreateCreateUserResponse {
	oneof result {
		string user_id = 1;
		QueryResultState query_state = 2;
	}
}



message CreateRoleRequest {
	string role_name = 1;
}
message CreateRoleRespone {
	oneof result {
		string role_id = 1;
		QueryResultState query_state = 2;
	}
}


message CreateClientUserAccountRequest {
	string user_name = 1;
	string user_password = 2;
	string user_id = 3;
}
message CreateClientUserAccountResponse {
	oneof result {
		string user_account_id = 1;
		QueryResultState query_state = 2;
	}
}


message FindUserAccountByUserNameRequest {
  string user_name = 1;
}

message FindUserAccountByUserNameResponse {
	UserAccountRead user_account = 1;
	QueryResultState query_state = 2;
}


message FindUserAccountByIdRequest {
  string user_account_id = 1;
}

message FindUserAccountByIdResponse {
	UserAccountRead user_account = 1;
	QueryResultState query_state = 2;
}